@@ -107,9 +107,9 @@ public class HelixCloudEventListener implements CloudEventListener {
     try {
       LOG.info("Loading class: " + implClassName);
       implClass = (DefaultCloudEventCallbackImpl) HelixUtil.loadClass(getClass(), implClassName)
-          .newInstance();
+          .getConstructor().newInstance();
     } catch (Exception e) {
-      implClass = DefaultCloudEventCallbackImpl.class.newInstance();
+      implClass = new DefaultCloudEventCallbackImpl();
       LOG.error(
           "No cloud event callback implementation class found for: {}. message: {}. Using default callback impl class instead.",
           implClassName, e.getMessage());
